--- a/stylus/misc/reusables.styl
+++ b/stylus/misc/reusables.styl
@@ -58,7 +58,7 @@ $functional-list // this has to be the LI
 	.func-inner-wrap
 		display: block
 		text-decoration: none
-		padding: 9px 16px 8px
+		padding: 11px 16px 10px
 		color: gainsboro-dark
 	> a // If the List is one clickable Link
 		&:hover
@@ -72,12 +72,12 @@ $functional-list // this has to be the LI
 	.icon
 	.avatar-wrap
 	.room-face
-		width: 24px
-		height: 24px
+		width: 28px
+		height: 28px
 		margin-right: 8px
-		margin-top: -3px
+		margin-top: -5px
 		float: left
-		line-height: 24px
+		line-height: 28px
 	.icon
 		padding: 3px 0
 	.room-face
@@ -103,6 +103,7 @@ $functional-list // this has to be the LI
 		color: white
 	.name
 		ellipsis()
+		font-size: 14px
 
 /*______ Avatar wrap ______*/
 .avatar-wrap
